fix( change size icon) add shadow portfolio

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<li class="list-features-item">
 							<div class="feature-icon">
 								<svg width="70" height="70">
-									<use use href="./images/sprite.svg#antenna"></use>
+									<use href="./images/sprite.svg#antenna"></use>
 								</svg>
 							</div>
 							<h3 class="list-features">Внимание к деталям</h3>
@@ -88,7 +88,7 @@
 						<li class="list-features-item">
 							<div class="feature-icon">
 								<svg width="70" height="70">
-									<use use href="./images/sprite.svg#clock"></use>
+									<use href="./images/sprite.svg#clock"></use>
 								</svg>
 							</div>
 							<h3 class="list-features">Пунктуальность</h3>
@@ -100,7 +100,7 @@
 						<li class="list-features-item">
 							<div class="feature-icon">
 								<svg width="70" height="70">
-									<use use href="./images/sprite.svg#diagram"></use>
+									<use href="./images/sprite.svg#diagram"></use>
 								</svg>
 							</div>
 							<h3 class="list-features">Планирование</h3>
@@ -112,7 +112,7 @@
 						<li class="list-features-item">
 							<div class="feature-icon">
 								<svg width="70" height="70">
-									<use use href="./images/sprite.svg#astronaut"></use>
+									<use href="./images/sprite.svg#astronaut"></use>
 								</svg>
 							</div>
 							<h3 class="list-features">Современные технологии</h3>
@@ -153,8 +153,8 @@
 								<p class="job">Product Designer</p>
 								<ul class="social-list">
 									<li class="social-list-item">
-										<a href="" class="social-list-link all">
-											<svg class="social-list-icon insta">
+										<a href="" class="social-list-link">
+											<svg class="social-list-icon">
 												<use href="./images/sprite.svg#instagram"></use>
 											</svg>
 										</a>
@@ -304,33 +304,38 @@
 					<h2 class="title">Постоянные клиенты</h2>
 					<ul class="clients-list">
 						<li class="clients-list-item">
-							<a class="clients-list-link" href=""><svg class="clients-list-icon">
+							<a class="clients-list-link" href="">
+								<svg class="clients-list-icon" width="41" height="47">
 									<use href="./images/sprite.svg#icon-compani_1"></use>
 								</svg></a>
 						</li>
 						<li class="clients-list-item">
-							<a class="clients-list-link" href=""><svg class="clients-list-icon">
+							<a class="clients-list-link" href="">
+								<svg class="clients-list-icon" width="40" height="52">
 									<use href="./images/sprite.svg#icon-compani_2"></use>
 								</svg></a>
 						</li>
 						<li class="clients-list-item">
-							<a class="clients-list-link" href=""><svg class="clients-list-icon">
+							<a class="clients-list-link" href="">
+								<svg class="clients-list-icon" width="43" height="41">
 									<use href="./images/sprite.svg#icon-compani_3"></use>
 								</svg></a>
 						</li>
 						<li class="clients-list-item">
-							<a class="clients-list-link current-link" href=""><svg
-									class="clients-list-icon client-current">
+							<a class="clients-list-link" href="">
+								<svg class="clients-list-icon" width="84" height="41">
 									<use href="./images/sprite.svg#icon-compani_4"></use>
 								</svg></a>
 						</li>
 						<li class="clients-list-item">
-							<a class="clients-list-link" href=""><svg class="clients-list-icon">
+							<a class="clients-list-link" href="">
+								<svg class="clients-list-icon" width="63" height="45">
 									<use href="./images/sprite.svg#icon-compani_5"></use>
 								</svg></a>
 						</li>
 						<li class="clients-list-item">
-							<a class="clients-list-link" href=""><svg class="clients-list-icon">
+							<a class="clients-list-link" href="">
+								<svg class="clients-list-icon" width="94" height="44">
 									<use href="./images/sprite.svg#icon-compani_6"></use>
 								</svg></a>
 						</li>
@@ -369,7 +374,7 @@
 							</a>
 						</li>
 						<li class="social-item">
-							<a class="social-link all" href="">
+							<a class="social-link" href="">
 								<svg class="social-icon" width="20" height="20">
 									<use href="./images/sprite.svg#twitter"></use>
 								</svg></a>
