--- a/portfolio.html
+++ b/portfolio.html
@@ -71,14 +71,14 @@
 					</ul>
 					<!--Проэкты-->
 					<ul class="list-project">
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio.jpg" alt="Ноутбук" width="370" />
 							<div class="portfolio-card-content">
 								<h3 class="title-project">Технокряк</h3>
 								<p class="filtre-project">Веб-сайт</p>
 							</div>
 						</li>
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio1.jpg" alt="баскетболисты"
 								width="370" />
 							<div class="portfolio-card-content">
@@ -86,7 +86,7 @@
 								<p class="filtre-project">Дизайн</p>
 							</div>
 						</li>
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio2.jpg"
 								alt="Эмблема рибного ресторана" width="370" />
 							<div class="portfolio-card-content">
@@ -94,7 +94,7 @@
 								<p class="filtre-project">Приложение</p>
 							</div>
 						</li>
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio3.jpg" alt="Наушники"
 								width="370" />
 							<div class="portfolio-card-content">
@@ -102,7 +102,7 @@
 								<p class="filtre-project">Маркетинг</p>
 							</div>
 						</li>
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio4.jpg" alt="2 коробки"
 								width="370" />
 							<div class="portfolio-card-content">
@@ -110,7 +110,7 @@
 								<p class="filtre-project">Приложение</p>
 							</div>
 						</li>
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio5.jpg" alt="Моноблок"
 								width="370" />
 							<div class="portfolio-card-content">
@@ -118,21 +118,21 @@
 								<p class="filtre-project">Веб-сайт</p>
 							</div>
 						</li>
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio6.jpg" alt="Книга" width="370" />
 							<div class="portfolio-card-content">
 								<h3 class="title-project">Издание Limited Edition</h3>
 								<p class="filtre-project">Дизайн</p>
 							</div>
 						</li>
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio7.jpg" alt="Бирка" width="370" />
 							<div class="portfolio-card-content">
 								<h3 class="title-project">Проект LAB</h3>
 								<p class="filtre-project">Маркетинг</p>
 							</div>
 						</li>
-						<li class=" project-item">
+						<li class="project-item">
 							<img class="img-project" src="./images/portfolio/portfolio8.jpg" alt="Ноутбук"
 								width="370" />
 							<div class="portfolio-card-content">
@@ -175,7 +175,7 @@
 							</a>
 						</li>
 						<li class="social-item">
-							<a class="social-link all" href="">
+							<a class="social-link" href="">
 								<svg class="social-icon" width="20" height="20">
 									<use href="./images/sprite.svg#twitter"></use>
 								</svg></a>
